--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,5 @@
-Daniel Ashhami (dnaq)
+Original author of sodiumoxide: Daniel Ashhami (dnaq)
+
+This fork of sodiumoxide written by team at MaidSafe.net <dev@maidsafe.net>
 
 Author of sodium: Frank Denis (jedisct1)
